--- a/src/index.css
+++ b/src/index.css
@@ -35,5 +35,18 @@ select {
 
 input[type=number]::-webkit-inner-spin-button {
   -webkit-appearance: none;
+}
 
+::-webkit-scrollbar-track {
+  background-color: #F4F4F4;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar {
+  width: 6px;
+  background: #F4F4F4;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #dad7d7;
 }
