feat: hook de deletar cadastros, refact: ajustes em como as listas de itens sao exibidas, rotas e componentes styles: ajustes em alguns detalhes

--- a/src/index.css
+++ b/src/index.css
@@ -90,3 +90,37 @@ input[type=number]::-webkit-inner-spin-button {
     transform: rotate(360deg);
   }
 }
+
+/* button {
+  all: unset;
+} */
+
+.dialogAnimationOverlay {
+  animation: overlayShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
+}
+
+.dialogAnimationContent {
+  animation: contentShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
+}
+
+@keyframes overlayShow {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes contentShow {
+  from {
+    opacity: 0;
+    transform: translate(-50%, -48%) scale(0.96);
+  }
+
+  to {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
+  }
+}
