--- a/src/index.css
+++ b/src/index.css
@@ -38,17 +38,18 @@ input[type=number]::-webkit-inner-spin-button {
 }
 
 ::-webkit-scrollbar-track {
-  background-color: #F4F4F4;
-  border-radius: 10px;
+  background: rgb(37, 99, 235);
 }
 
 ::-webkit-scrollbar {
+  background: rgb(37, 99, 235);
   width: 6px;
+  height: 6px;
   background: #F4F4F4;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #dad7d7;
+  background-color: #F4F4F4;
 }
 
 .lds-ring {
@@ -90,10 +91,6 @@ input[type=number]::-webkit-inner-spin-button {
     transform: rotate(360deg);
   }
 }
-
-/* button {
-  all: unset;
-} */
 
 .dialogAnimationOverlay {
   animation: overlayShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
