styles: ajustes nas paginas de produto e pedidos

--- a/src/index.css
+++ b/src/index.css
@@ -59,6 +59,10 @@ select {
     background-color: #424242;
   }
 
+  .productsScroll::-webkit-scrollbar-track {
+    background-color: #212121;
+  }
+
 }
 
 .lds-ring {
